--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,5 +1,39 @@
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+cycler==0.11.0
 Flask==2.2.2
-Pillow==9.2.0
+Flask-Bootstrap==3.3.7.1
+fonttools==4.34.4
+google-api-core==2.8.2
+google-auth==2.10.0
+google-cloud==0.34.0
+google-cloud-core==2.3.2
+google-cloud-storage==2.5.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.1
+matplotlib==3.5.3
 numpy==1.23.1
 opencv-python==4.6.0.66
+packaging==21.3
+php==1.2.1
+Pillow==9.2.0
+protobuf==4.21.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-magic==0.4.27
+requests==2.28.1
+rsa==4.9
+six==1.16.0
+urllib3==1.26.11
 Werkzeug==2.2.2
