--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,3 +1,4 @@
+Bootstrap-Flask==2.0.2
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
@@ -5,7 +6,6 @@ click==8.1.3
 colorama==0.4.5
 cycler==0.11.0
 Flask==2.2.2
-Flask-Bootstrap==3.3.7.1
 fonttools==4.34.4
 google-api-core==2.8.2
 google-auth==2.10.0
