--- a/web/app.yaml
+++ b/web/app.yaml
@@ -1,4 +1,16 @@
 runtime: python38
-# env_variables:
-#     CLOUD_STORAGE_BUCKET: img-proc-fb
 instance_class: F2
+
+handlers:
+  - url: /.*
+    script: auto
+    secure: always
+    redirect_http_response_code: 301
+  - url: /
+    script: auto
+    secure: always
+    redirect_http_response_code: 301
+  - url: /(.*)$
+    script: auto
+    secure: always
+    redirect_http_response_code: 301
