--- a/.gitignore
+++ b/.gitignore
@@ -159,9 +159,4 @@ balmy-nuance-359122.json
 googleb5e42b25019c3d31.html
 
 # Session key
-secrets.py
-
-<<<<<<< HEAD
-.vscode/
-=======
->>>>>>> 45a7fe429c850b0ea8db089d8535190b6275fc45
+mysecrets.py
