added gc bucket env var

--- a/web/app.yaml
+++ b/web/app.yaml
@@ -19,3 +19,6 @@ handlers:
     script: auto
     secure: always
     redirect_http_response_code: 301
+
+env_variables:
+  CLOUD_STORAGE_BUCKET: toonoisy_ims
