--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+myEnv/
 
 # Spyder project settings
 .spyderproject
@@ -162,5 +163,3 @@ googleb5e42b25019c3d31.html
 mysecrets.py
 
 non-web-files/test.py
-
-/myEnv/
